[package]
name = "sea-orm-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = "1.1.1"
serde = "1.0.214"

[dev-dependencies]
axum = "0.7.7"
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tokio-macros = "2.4.0"
