[package]
name = "sea-orm-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = "1.1.1"
serde = "1.0.214"

[dev-dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
dotenv = "0.15.0"
http-body-util = "0.1.2"
mime = "0.3.17"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
